# Avatar-Gen-Attribute-API

./: .dockerignore  BUILD.bazel  Dockerfile  README.md  WORKSPACE  requirements.txt
app/: __init__.py  main.py  palette.json
app/eye_color_detection/: eye_color_detection.py
app/face_detection/: face_detection.py  image_processing.py
app/hair_color_detection/: hair_color_detection.py
app/hair_color_detection/hair_color_detector/: HairSegmentator.py
app/image_generation/: generate.py
app/quality_check/: quality_check.py
app/routes/: __init__.py  attributes_api.py  check_api.py  face_api.py  genai_api.py
app/schemas/: schemas.py
app/skin_tone_detection/: skin_tone_detection.py
app/skin_tone_transfer/: skin_tone_change.py
app/skin_tone_transfer/skin/: faceDetection.py  face_landmark_detection.py  skinDetection.py
app/utils/: utils.py
